[package]
name = "buck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
id3 = "1.0.2"
walkdir = "2.3.2"
genpdf = "0.2.0"
textwrap = "0.15.0"
nix = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evdev = "0.11.4"

[features]
btonly = []
kobo = []
kindle =[]
